Commit Clase Semana 3

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Lugares</string>
+    <string name="tv_correo">Correo</string>
+    <string name="tv_clave">Password</string>
 </resources>
