Commit Clase de cardview, final de semana 3 en presentaciones pero semana 6 en U

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,17 @@
     <string name="menu_lugar">Lugares</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="msg_nombre">Nombre del lugar</string>
+    <string name="msg_correo">Corre (elcorreo@xxxx.xxx)</string>
+    <string name="msg_imagen">Imagen del Lugar</string>
+    <string name="msg_telefono">Teléfono (9999–9999)</string>
+    <string name="msg_web">Sitio Web</string>
+    <string name="bt_agregar">Agregar</string>
+    <string name="msg_lugar_added">Lugar agregado</string>
+    <string name="msg_data">Faltan datos!!</string>
+    <string name="fb_agregar">Agregar Lista</string>
+
 </resources>
