--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,8 +26,13 @@
     <string name="msg_lugar_updated">Lugar actualizado</string>
     <string name="msg_data">Faltan datos!!</string>
     <string name="fb_agregar">Agregar Lista</string>
+    <string name="menu_delete">Lugar</string>
 
     <string name="bt_update">Actualizar</string>
+    <string name="deleted">Eliminado</string>
+    <string name="si">SÍ</string>
+    <string name="no">NO</string>
+    <string name="seguroBorrar">¿Deseas borrar </string>
 
 
 </resources>
